<resources>
    <string name="app_name">MyQQ</string>
    <string name="share_name">发送到Base64</string>

    <string name="bt1_text">加密</string>
    <string name="bt2_text">解密</string>
    <string name="tv1_text">原始数据</string>
    <string name="tv2_text">加密后数据</string>


    <string name="account">用户名/邮箱</string>
    <string name="name">用户名</string>
    <string name="passwd">密码</string>
    <string name="login">登录</string>
    <string name="signin">用户注册</string>
    <string name="forget">忘记密码</string>
</resources>