<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    >

    <!-- 整个页面使用相对布局 -->

    <!-- 实现头像的ImageView -->
    <ImageView
        android:id="@+id/pic"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:src="@drawable/head" />

    <!-- 作输入框的EditText -->
    <EditText
        android:id="@+id/Acount"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/pic"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:background="@drawable/edittextselector"
        android:hint="@string/name"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textAlignment="center"
        android:visibility="visible" />

    <EditText
        android:id="@+id/passwd"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/Acount"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="35dp"
        android:layout_weight="1"
        android:background="@drawable/edittextselector"
        android:hint="@string/passwd"
        android:inputType="textPassword"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textAlignment="center"
        android:visibility="visible" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@+id/passwd"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonselector"
        android:text="@string/login" />

    <!-- 下半部分使用线性布局 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <!-- 分左右两个线性布局实现两个TextView居中对称 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forget"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/forget" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/signin" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>